modules/gdscript/tests/scripts/analyzer/errors/nullable_for_on_subscript.gd
class A:
    var arr: Array? = null
func test():
    var instance := A.new()
    for element in instance.arr: # Should error
        print(element)